k8s/qa/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: qa
  labels:
    app: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: my-app
          image: docker.io/mydockerhubrepo/myapp:8-qa
          ports:
            - containerPort: 5000
