k8s/qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
  namespace: qa
spec:
  selector:
    app: my-app
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
